[package]
name = "bst"
version = "0.1.0"
authors = ["mark"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
quickcheck = "1"

[[bench]]
name = "bench"
harness = false
